apollo-federation/src/connectors/snapshots/apollo_federation__connectors__url_template__test_parse__absolute_url_with_query_variable.snap
---
source: apollo-federation/src/connectors/url_template.rs
expression: "URLTemplate::from_str(\"http://example.com?abc={$args.abc}\")"
---
Ok(
    URLTemplate {
        base: Some(
            Url {
                scheme: "http",
                cannot_be_a_base: false,
                username: "",
                password: None,
                host: Some(
                    Domain(
                        "example.com",
                    ),
                ),
                port: None,
                path: "/",
                query: None,
                fragment: None,
            },
        ),
        path: [],
        query: [
            (
                StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "abc",
                                location: 19..22,
                            },
                        ),
                    ],
                },
                StringTemplate {
                    parts: [
                        Expression(
                            Expression {
                                expression: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Var(
                                                WithRange {
                                                    node: $args,
                                                    range: Some(
                                                        0..5,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Key(
                                                        WithRange {
                                                            node: Field(
                                                                "abc",
                                                            ),
                                                            range: Some(
                                                                6..9,
                                                            ),
                                                        },
                                                        WithRange {
                                                            node: Empty,
                                                            range: Some(
                                                                9..9,
                                                            ),
                                                        },
                                                    ),
                                                    range: Some(
                                                        5..9,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                0..9,
                                            ),
                                        },
                                    },
                                ),
                                location: 24..33,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
