apollo-federation/src/connectors/snapshots/apollo_federation__connectors__url_template__test_parse__path_list-4.snap
---
source: apollo-federation/src/connectors/url_template.rs
expression: "URLTemplate::from_str(\"/abc/{$this.def.thing}/ghi\")"
---
Ok(
    URLTemplate {
        base: None,
        path: [
            StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "abc",
                            location: 1..4,
                        },
                    ),
                ],
            },
            StringTemplate {
                parts: [
                    Expression(
                        Expression {
                            expression: Path(
                                PathSelection {
                                    path: WithRange {
                                        node: Var(
                                            WithRange {
                                                node: $this,
                                                range: Some(
                                                    0..5,
                                                ),
                                            },
                                            WithRange {
                                                node: Key(
                                                    WithRange {
                                                        node: Field(
                                                            "def",
                                                        ),
                                                        range: Some(
                                                            6..9,
                                                        ),
                                                    },
                                                    WithRange {
                                                        node: Key(
                                                            WithRange {
                                                                node: Field(
                                                                    "thing",
                                                                ),
                                                                range: Some(
                                                                    10..15,
                                                                ),
                                                            },
                                                            WithRange {
                                                                node: Empty,
                                                                range: Some(
                                                                    15..15,
                                                                ),
                                                            },
                                                        ),
                                                        range: Some(
                                                            9..15,
                                                        ),
                                                    },
                                                ),
                                                range: Some(
                                                    5..15,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            0..15,
                                        ),
                                    },
                                },
                            ),
                            location: 6..21,
                        },
                    ),
                ],
            },
            StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "ghi",
                            location: 23..26,
                        },
                    ),
                ],
            },
        ],
        query: [],
    },
)
