apollo-federation/src/connectors/snapshots/apollo_federation__connectors__url_template__test_parse__url_path_template_parse-3.snap
---
source: apollo-federation/src/connectors/url_template.rs
expression: "URLTemplate::from_str(\"/users/{$this.id}?a={$config.b}#junk\")"
---
Ok(
    URLTemplate {
        base: None,
        path: [
            StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "users",
                            location: 1..6,
                        },
                    ),
                ],
            },
            StringTemplate {
                parts: [
                    Expression(
                        Expression {
                            expression: Path(
                                PathSelection {
                                    path: WithRange {
                                        node: Var(
                                            WithRange {
                                                node: $this,
                                                range: Some(
                                                    0..5,
                                                ),
                                            },
                                            WithRange {
                                                node: Key(
                                                    WithRange {
                                                        node: Field(
                                                            "id",
                                                        ),
                                                        range: Some(
                                                            6..8,
                                                        ),
                                                    },
                                                    WithRange {
                                                        node: Empty,
                                                        range: Some(
                                                            8..8,
                                                        ),
                                                    },
                                                ),
                                                range: Some(
                                                    5..8,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            0..8,
                                        ),
                                    },
                                },
                            ),
                            location: 8..16,
                        },
                    ),
                ],
            },
        ],
        query: [
            (
                StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "a",
                                location: 18..19,
                            },
                        ),
                    ],
                },
                StringTemplate {
                    parts: [
                        Expression(
                            Expression {
                                expression: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Var(
                                                WithRange {
                                                    node: $config,
                                                    range: Some(
                                                        0..7,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Key(
                                                        WithRange {
                                                            node: Field(
                                                                "b",
                                                            ),
                                                            range: Some(
                                                                8..9,
                                                            ),
                                                        },
                                                        WithRange {
                                                            node: Empty,
                                                            range: Some(
                                                                9..9,
                                                            ),
                                                        },
                                                    ),
                                                    range: Some(
                                                        7..9,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                0..9,
                                            ),
                                        },
                                    },
                                ),
                                location: 21..30,
                            },
                        ),
                        Constant(
                            Constant {
                                value: "#junk",
                                location: 31..36,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
